--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "js-cookie": "^3.0.5",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
