--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.8",
     "@tailwindcss/forms": "^0.5.7",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
