--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@react-pdf/renderer": "^3.3.8",
     "@tailwindcss/forms": "^0.5.7",
     "js-cookie": "^3.0.5",
