--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.1.1",
     "@react-pdf/renderer": "^3.3.8",
     "@tailwindcss/forms": "^0.5.7",
+    "chart.js": "^4.4.2",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
@@ -20,9 +22,17 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
+    "qr-scanner": "^1.4.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
+    "react-qr-code": "^2.0.12",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
@@ -31,5 +41,11 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+  },
+  "overrides": {
+    "react-qr-reader": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
