--- a/my-app/package.json
+++ b/my-app/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-phone-number-input": "^3.3.9",
     "react-qr-code": "^2.0.12",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11"
